--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>site do laço comprido </title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+   <div class="principal">
+   </reader class="cabeçalho">
+       <!--<img class="imgem-cabeçalho"src=""alt="logotipo="-->
+       <h1 class="titulo">site do laço comprido</h1>
+</reader>
+</section class="secao1">
+<img src="laço.png"alt="imagem do site do laço comprido">
+</h3 class="titulo "
+   
+   
+   
+   
     <h1>vai ser uma imagem aqui </h1>
+    <img src="laço.png" alt="laço">
 <ul>
     <li>escola <li>]
         <li>estudante</li>
