--- a/index.html
+++ b/index.html
@@ -2,28 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>site do laço comprido </title>
-<link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta keywords="">
+    <title>site do laço comprido</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-   <div class="principal">
-   </reader class="cabeçalho">
-       <!--<img class="imgem-cabeçalho"src=""alt="logotipo="-->
-       <h1 class="titulo">site do laço comprido</h1>
-</reader>
-</section class="secao1">
-<img src="laço.png"alt="imagem do site do laço comprido">
-</h3 class="titulo "
-   
-   
-   
-   
-    <h1>vai ser uma imagem aqui </h1>
-    <img src="laço.png" alt="laço">
-<ul>
-    <li>escola <li>]
-        <li>estudante</li>
+<div class="principal">
+    <header class="cabecalho">
+        <img class="imagem-cabecalho" src="laço.png" alt="laço"/>
+         <h1 class="titulo">site do laço comprido</h1>
+    </header>
+    <section class="secao1">
+        <img class="fotoreceita1" src="caminho-da-imagem-receita1.png" alt="somos uma loja online entregando produtos de qualidade no ramo  do laço comprido e tradição gaúcha"/>
+        <h3 class="tituloreceita1">venda de laços </h3>
+        <br><br>
+        <ul class="">
+            <li>laços de alta qualidade</li>
+            <li>↪Parcelamos no cartão em até 5X </li>
+            <li>↪enviamos para todo o brasil</li>
+            <li>temos laços de couro, sintetíco</li>
+        </ul>
+        <br><br>
+        <h4></h4>
+        <p class="">
+           
+        </p>
+    </section>
+</div>
 </body>
 </html>
